--- a/yabgc.html
+++ b/yabgc.html
@@ -24,7 +24,7 @@ window.onload = function () {
   // You don't have to do this in the html, it could be done in your Boot state too, but for simplicity I'll keep it here.
   game.state.add('Boot', BasicGame.Boot)
   game.state.add('Preloader', Preloader)
-  game.state.add('MainMenu', BasicGame.MainMenu)
+  game.state.add('MainMenu', MainMenu)
   game.state.add('Game', BasicGame.Game)
 
   // Now start the Boot state.
