converted game to es6 +lint
lint: standardjs

--- a/yabgc.html
+++ b/yabgc.html
@@ -25,7 +25,7 @@ window.onload = function () {
   game.state.add('Boot', BasicGame.Boot)
   game.state.add('Preloader', Preloader)
   game.state.add('MainMenu', MainMenu)
-  game.state.add('Game', BasicGame.Game)
+  game.state.add('Game', Game)
 
   // Now start the Boot state.
   game.state.start('Boot')
